# training_extensions

./: .codecov.yaml  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint.yaml  .mdlrc  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  <Plug>(multiple-cursors-apply)<Plug>(multiple-cursors-detect)  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  OTE_landing_page.md  OTX.md  QUICK_START_GUIDE.md  README.md  anomaly_results.csv  arrow_debug.py  collect_results.py  compressed_graph.dot  cvpr_demo.ipynb  docker-compose.cpu.yml  docker-compose.gpu.yml  exp.sh  exp_cls.sh  exp_det.sh  exp_seg.sh  file.txt  generate_counting_algo_dataset.py  genindex.html  (+43 more)
.azure-pipelines/: pre-commit.yml
.ci/: Dockerfile  README.md  build-deps.txt  build.sh  check-runner.sh  csv.tmpl  ipas_default.config  piptools-deps.txt  publish-deps.in  publish-deps.txt  requirements.txt  start-runner.sh  stop-runner.sh  tox-deps.txt  trivy-csv.yaml  trivy-json.yaml  trivy.yaml
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yaml  dependabot.yaml  dependabot.yml  labeler.yaml  labeler.yml  pull_request_template.md
1.1.0/: genindex.html  search.html
1.1.1/: objects.inv
1.1.2/: search.html
1.2.0/: objects.inv  search.html  searchindex.js
1.2.1/: genindex.html
1.2.3.3/: genindex.html  search.html
1.2.4rc1/: py-modindex.html  searchindex.js
1.3.0/: py-modindex.html
1.3.1/: searchindex.js
1.4.0rc2/: search.html
1.4.0rc4/: searchindex.js
1.4.1/: genindex.html  py-modindex.html  search.html
1.4.2/: searchindex.js
1.4.2rc4/: objects.inv
1.4.2rc5/: genindex.html  py-modindex.html  search.html
1.4.3/: genindex.html  py-modindex.html
1.4.3rc1/: search.html
1.4.4/: genindex.html
1.4.4rc1/: searchindex.js
1.4.5/: search.html
1.5.0/: genindex.html  py-modindex.html  search.html  searchindex.js
1.5.0rc1/: genindex.html  py-modindex.html  search.html  searchindex.js
1.5.2/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.6.0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.6.1/: objects.inv  search.html  searchindex.js
1.6.1rc7/: genindex.html  objects.inv  py-modindex.html  searchindex.js
1.6.2/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.6.3/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.6.3rc0/: genindex.html  py-modindex.html  search.html
1.6.4/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.6.5/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.0.0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.1.0/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.2.0rc0/: genindex.html  objects.inv  searchindex.js
2.2.0rc1/: genindex.html  py-modindex.html  search.html  searchindex.js
2.2.0rc10/: genindex.html  objects.inv  py-modindex.html  search.html
2.2.0rc11/: genindex.html  py-modindex.html  search.html  searchindex.js
2.2.0rc2/: genindex.html  py-modindex.html  search.html
2.2.0rc3/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.2.0rc4/: genindex.html  py-modindex.html  search.html  searchindex.js
2.2.0rc5/: genindex.html  py-modindex.html  search.html  searchindex.js
2.2.0rc6/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.2.0rc7/: genindex.html  py-modindex.html  search.html  searchindex.js
2.2.0rc8/: genindex.html  py-modindex.html  search.html  searchindex.js
2.2.0rc9/: genindex.html  py-modindex.html  search.html  searchindex.js
Experiments/: Untitled.ipynb  run_exp.sh
_modules/: index.html  otx.html
_sources/: index.rst.txt
_static/: pygments.css
api/: index.html
bash_scripts/: export.sh  maskrcnn_r50.sh  optimize.sh
counting_scripts/: run_Aeromonas.sh  run_Coliform.sh  run_Enterococci.sh  run_Legionella.sh
develop/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
devtools/: pylint.rc
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda  README.md  build.sh  download_pretrained_weights.py  requirements.in  requirements.txt  run.sh
docs/: Makefile  README.md  README.rst  make.bat  requirements.txt
explanation/: index.html
features/: algorithmic_background.html  algorithms.html  features.html  index.html
for_developers/: add_custom_model.ipynb  cli_guide.md  contribution_guide.md  dir_structure.md  engine_api_example.ipynb  example.ipynb  helpers.py  product_design.md  requirements-lock.txt  setup_guide.md  torchvision.ipynb
fruits_and_vegetables_dataset/: genindex.html  objects.inv  search.html  searchindex.js
general/: utils.py
get_started/: index.html  installation.html  introduction.html  quick_start.html  quick_start_guide.html
guide/: index.html
how_to_guides/: index.html
misc/: README.md
misc/pytorch_toolkit/lung_nodule_detection/src/utils/openvino_pytorch_layers/user_ie_extensions/: CMakeLists.txt  calculate_grid.cpp  calculate_grid.hpp  complex_mul.cpp  complex_mul.hpp  fft.cpp  fft.hpp  grid_sample.cpp  grid_sample.hpp  ov_extension.cpp  sparse_conv.cpp  sparse_conv.hpp  sparse_conv_transpose.cpp  sparse_conv_transpose.hpp  unpool.cpp  unpool.hpp
models/: label_schema.json
notebooks/: 000_install.ipynb  001.detection.ipynb  001_zero-shot-visual-prompting.ipynb  001_zero_shot_visual_prompting.ipynb  002.instance_segmentation.ipynb  002_multi_label_classification.ipynb  003.multi_label_cls.ipynb  003_detection.ipynb  004_segmentation.ipynb  005_instance_segmentation.ipynb  006.zero-shot-visual-prompting.ipynb  006_datamodule_and_model.ipynb  007_VOC_examples.ipynb  README.md  cli_scripts.sh  requirements.txt  train.ipynb  tutorial.ipynb
ote/: requirements.txt  setup.py
ote_cli/: README.md  requirements.txt  setup.py
ote_sdk/: .pylintrc  LocalMakefile  Makefile  README.md  requirements.txt  setup.py  src_paths.json
(+28563 files in other folders)
